# ml-project

./: .gitignore  main.py  pyproject.toml
10_recommendation/: col_based_filtering.py  content_based_filtering.py  ratent_factor_col_based_filtering.py  recommend_svd.py
1_numpy/: numpy_dot_transpose.py  numpy_ndarray0.py  numpy_ndarray1.py  numpy_ndarray2_indexing.py  numpy_sort.py
1_pandas/: pandas_aggregation.py  pandas_dataframe_api.py  pandas_dataframe_data_handling.py  pandas_index.py  pandas_lambda.py  pandas_missing_data.py
2_pandas/: pandas_dataframe_data_handling.py  pandas_index.py  pandas_index_filtering.py  pandas_lambda.py  pandas_missing_data.py
2_scikit/: iris_classification.py  scikit_k_fold.py
3_scikit/: data_encoding.py  feature_scaling_standardization.py  scikit_example_data.py  scikit_grid_search_cv.py  scikit_k_fold.py  scikit_model_selection.py  titanic_ml_model.py  titanic_prediction_competition.py
4_evaluation/: accuracy.py  confusion_matrix.py  f1_score.py  pima_diabetes_pred.py  precision_recall.py  spaceship_titanic_prediction_competition.py  spaceship_titanic_prediction_competition_2.py  submission.csv  submission_ensemble.csv
5_classification/: credit_card_fraud_detection.py  decision_tree_visualization.py  dt_human_activity_recognition.py  dt_overfitting.py  feature_selection.py  gbm_exam.py  hyperopt_exam.py  hyperopt_xgboost_exam.py  light_gbm.py  permutation_importance.py  random_forest.py  santander.py  santander_lgbm.py  stacking_model.py  voting.py  xgb_native.py  xgb_scikit.py
6_regression/: bike_demand_pred.py  (+11 more)
(+23 files in other folders)
